# valhalla

./: CMakeLists.txt
src/vexcl/: CMakeLists.txt  reduce.cpp  saxpy.cpp  scan.cpp
