FIND_PACKAGE(OpenCL REQUIRED)
FIND_PACKAGE(Boost 1.48 COMPONENTS system REQUIRED)
SET(Boost_USE_STATIC_LIBS OFF)

SET(VEXCL_ROOT $ENV{VEXCL_ROOT} CACHE STRING "VexCL root directory")

INCLUDE_DIRECTORIES(${VEXCL_ROOT} ${OpenCL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(SYSTEM ${Boost_INCLUDE_DIRS})

# Collect the source
FILE(GLOB FILES "*.cpp")

FOREACH(FILE ${FILES})
    GET_FILENAME_COMPONENT(FUNC ${FILE} NAME_WE)
    GET_FILENAME_COMPONENT(FULL_DIR_NAME ${FILE} PATH)
    GET_FILENAME_COMPONENT(DIR_NAME ${FULL_DIR_NAME} NAME)

    ADD_EXECUTABLE(vexcl_${FUNC} ${FILE})

    TARGET_LINK_LIBRARIES(vexcl_${FUNC} ${OpenCL_LIBRARY} ${Boost_LIBRARIES})

    SET_TARGET_PROPERTIES(vexcl_${FUNC}
                          PROPERTIES
                          OUTPUT_NAME ${FUNC})
ENDFOREACH()
